// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Md2NotionProvider toBlocks method should convert markdown to blocks correctly 1`] = `
[
  {
    "object": "block",
    "paragraph": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "hello ",
            "link": undefined,
          },
          "type": "text",
        },
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": true,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "world",
            "link": undefined,
          },
          "type": "text",
        },
      ],
    },
    "type": "paragraph",
  },
  {
    "heading_2": {
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "heading2",
            "link": undefined,
          },
          "type": "text",
        },
      ],
    },
    "object": "block",
    "type": "heading_2",
  },
  {
    "object": "block",
    "to_do": {
      "checked": true,
      "children": undefined,
      "rich_text": [
        {
          "annotations": {
            "bold": false,
            "code": false,
            "color": "default",
            "italic": false,
            "strikethrough": false,
            "underline": false,
          },
          "text": {
            "content": "todo",
            "link": undefined,
          },
          "type": "text",
        },
      ],
    },
    "type": "to_do",
  },
]
`;

exports[`Md2NotionProvider toRichText method should convert markdown to rich text correctly 1`] = `
[
  {
    "annotations": {
      "bold": true,
      "code": false,
      "color": "default",
      "italic": false,
      "strikethrough": false,
      "underline": false,
    },
    "text": {
      "content": "Hello ",
      "link": undefined,
    },
    "type": "text",
  },
  {
    "annotations": {
      "bold": true,
      "code": false,
      "color": "default",
      "italic": true,
      "strikethrough": false,
      "underline": false,
    },
    "text": {
      "content": "world",
      "link": undefined,
    },
    "type": "text",
  },
]
`;
